src/web/client/src/ResultsTable.css
* {
  box-sizing: border-box;
}

html {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
  font-size: 16px;
  background-color: var(--background-color);
  color: var(--text-color);
}

table,
.divTable {
  border: 1px solid var(--table-border-color);
  border-collapse: collapse;
  width: 100%;

  margin: 1rem 0;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.tr {
  display: flex;
}

tr,
.tr {
  width: fit-content;
}

tr:hover,
.tr:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

th,
.th,
td,
.td {
  position: relative;
  box-shadow: inset 0 0 0 1px var(--border-color);
  word-break: break-all;
  vertical-align: top;

  padding: 1.5rem;
}

th.variable,
.th.variable,
td.variable,
.td.variable {
  background-color: #f7f7f7;
}

tr.header {
  background-color: #fffdf7;
}

th,
.th {
  padding: 1rem;
  position: relative;
  text-align: center;
  vertical-align: bottom;
}

tr .cell {
}

tr .cell-rating {
  visibility: hidden;
  position: absolute;
  bottom: 1.25rem;
  right: -1rem;
  line-height: 0;
  font-size: 1.75rem;
}

tr:hover .cell-rating {
  visibility: visible;
}

tr .cell-rating .rating {
  cursor: pointer;
  margin-right: 1rem;
}

th .smalltext {
  visibility: hidden;
  font-weight: normal;
  font-size: 0.75rem;
  color: var(--smalltext-color);
}

th:hover .smalltext {
  visibility: visible;
}

th .summary {
  font-weight: normal;
  font-size: 0.8rem;
  padding: 0.25rem;
}

th .summary.highlight {
  background-color: #d1ffd7;
}

td,
.td {
}

td .status {
  margin-bottom: 0.5rem;
  font-weight: bold;
}

td .pass {
  color: var(--pass-color);
}

td .fail {
  color: var(--fail-color);
}

.first-prompt-col {
  border-left: 2px solid #888;
}

.first-prompt-row {
  border-top: 2px solid #888;
}

.resizer {
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  width: 5px;
  cursor: col-resize;
  user-select: none;
  touch-action: none;

  background: var(--text-color);
  opacity: 0.5;
}

.resizer.isResizing {
  background: var(--text-color);
  opacity: 1;
}

@media (hover: hover) {
  .resizer {
    opacity: 0;
  }

  *:hover > .resizer {
    opacity: 1;
  }
}

